Added personal whiteboard to Monica branch.

--- a/Monica's whiteboard.ipynb
+++ b/Monica's whiteboard.ipynb
@@ -9,12 +9,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Good Evening\n"
+      "Good Evening\n",
+      "Hello\n"
      ]
     }
    ],
    "source": [
-    "print(\"Good Evening\")"
+    "print(\"Good Evening\")\n",
+    "print(\"Hello\")"
    ]
   }
  ],
