--- a/Maura's whiteboard.ipynb
+++ b/Maura's whiteboard.ipynb
@@ -16,6 +16,27 @@
    "source": [
     "print(\"Testing 1,2,3,4\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "years = new_df[\"reportyear\"].unique()\n",
+    "\n",
+    "df_2002 = new_df[\"reportyear\"] == \"2002\"\n",
+    "df_2003 = new_df[\"reportyear\"] == \"2003\"\n",
+    "df_2004 = new_df[\"reportyear\"] == \"2004\"\n",
+    "df_2005 = new_df[\"reportyear\"] == \"2005\"\n",
+    "df_2006 = new_df[\"reportyear\"] == \"2006\"\n",
+    "df_2007 = new_df[\"reportyear\"] == \"2007\"\n",
+    "df_2008 = new_df[\"reportyear\"] == \"2008\"\n",
+    "df_2009 = new_df[\"reportyear\"] == \"2009\"\n",
+    "df_2010 = new_df[\"reportyear\"] == \"2010\"\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
