--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
        "[448950 rows x 31 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
        "[245621 rows x 13 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +937,7 @@
        "[245621 rows x 8 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1057,7 @@
        "[245621 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1196,7 @@
        "4       0.0     0.0            1.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1521,7 @@
        "[245621 rows x 17 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1554,20 +1554,377 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#total all modes, bicyclist, bus, car/pickup, motorcycle, pedestrian, truck, and vehicles by year"
+    "#separate the new_df by years\n",
+    "collisions_2002 = new_df[new_df[\"reportyear\"] == \"2002\"]\n",
+    "collisions_2003 = new_df[new_df[\"reportyear\"] == \"2003\"]\n",
+    "collisions_2004 = new_df[new_df[\"reportyear\"] == \"2004\"]\n",
+    "collisions_2005 = new_df[new_df[\"reportyear\"] == \"2005\"]\n",
+    "collisions_2006 = new_df[new_df[\"reportyear\"] == \"2006\"]\n",
+    "collisions_2007 = new_df[new_df[\"reportyear\"] == \"2007\"]\n",
+    "collisions_2008 = new_df[new_df[\"reportyear\"] == \"2008\"]\n",
+    "collisions_2009 = new_df[new_df[\"reportyear\"] == \"2009\"]\n",
+    "collisions_2010 = new_df[new_df[\"reportyear\"] == \"2010\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2002 Total</th>\n",
+       "      <th>2003 Total</th>\n",
+       "      <th>2004 Total</th>\n",
+       "      <th>2005 Total</th>\n",
+       "      <th>2006 Total</th>\n",
+       "      <th>2007 Total</th>\n",
+       "      <th>2008 Total</th>\n",
+       "      <th>2009 Total</th>\n",
+       "      <th>2010 Total</th>\n",
+       "      <th>Overall Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>All modes</th>\n",
+       "      <td>8550.0</td>\n",
+       "      <td>8498.0</td>\n",
+       "      <td>8503.0</td>\n",
+       "      <td>8456.0</td>\n",
+       "      <td>8502.0</td>\n",
+       "      <td>8382.0</td>\n",
+       "      <td>7862.0</td>\n",
+       "      <td>7481.0</td>\n",
+       "      <td>7259.0</td>\n",
+       "      <td>73493.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bicyclist</th>\n",
+       "      <td>909.0</td>\n",
+       "      <td>1050.0</td>\n",
+       "      <td>1225.0</td>\n",
+       "      <td>1209.0</td>\n",
+       "      <td>1283.0</td>\n",
+       "      <td>1179.0</td>\n",
+       "      <td>1270.0</td>\n",
+       "      <td>1262.0</td>\n",
+       "      <td>1273.0</td>\n",
+       "      <td>10660.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bus</th>\n",
+       "      <td>71.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>608.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Car/Pickup</th>\n",
+       "      <td>6857.0</td>\n",
+       "      <td>6518.0</td>\n",
+       "      <td>6495.0</td>\n",
+       "      <td>6356.0</td>\n",
+       "      <td>6291.0</td>\n",
+       "      <td>6025.0</td>\n",
+       "      <td>5413.0</td>\n",
+       "      <td>5061.0</td>\n",
+       "      <td>4722.0</td>\n",
+       "      <td>53738.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Motorcycle</th>\n",
+       "      <td>1960.0</td>\n",
+       "      <td>2087.0</td>\n",
+       "      <td>2067.0</td>\n",
+       "      <td>2115.0</td>\n",
+       "      <td>2261.0</td>\n",
+       "      <td>2477.0</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>2217.0</td>\n",
+       "      <td>2183.0</td>\n",
+       "      <td>19867.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pedestrian</th>\n",
+       "      <td>2069.0</td>\n",
+       "      <td>2434.0</td>\n",
+       "      <td>2622.0</td>\n",
+       "      <td>2718.0</td>\n",
+       "      <td>2679.0</td>\n",
+       "      <td>2683.0</td>\n",
+       "      <td>2556.0</td>\n",
+       "      <td>2506.0</td>\n",
+       "      <td>2474.0</td>\n",
+       "      <td>22741.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Truck</th>\n",
+       "      <td>395.0</td>\n",
+       "      <td>353.0</td>\n",
+       "      <td>359.0</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>340.0</td>\n",
+       "      <td>356.0</td>\n",
+       "      <td>314.0</td>\n",
+       "      <td>269.0</td>\n",
+       "      <td>244.0</td>\n",
+       "      <td>2990.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vehicles</th>\n",
+       "      <td>7494.0</td>\n",
+       "      <td>7229.0</td>\n",
+       "      <td>7144.0</td>\n",
+       "      <td>7064.0</td>\n",
+       "      <td>7096.0</td>\n",
+       "      <td>6939.0</td>\n",
+       "      <td>6427.0</td>\n",
+       "      <td>5984.0</td>\n",
+       "      <td>5678.0</td>\n",
+       "      <td>61055.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            2002 Total  2003 Total  2004 Total  2005 Total  2006 Total  \\\n",
+       "All modes       8550.0      8498.0      8503.0      8456.0      8502.0   \n",
+       "Bicyclist        909.0      1050.0      1225.0      1209.0      1283.0   \n",
+       "Bus               71.0        57.0        45.0        81.0        79.0   \n",
+       "Car/Pickup      6857.0      6518.0      6495.0      6356.0      6291.0   \n",
+       "Motorcycle      1960.0      2087.0      2067.0      2115.0      2261.0   \n",
+       "Pedestrian      2069.0      2434.0      2622.0      2718.0      2679.0   \n",
+       "Truck            395.0       353.0       359.0       360.0       340.0   \n",
+       "Vehicles        7494.0      7229.0      7144.0      7064.0      7096.0   \n",
+       "\n",
+       "            2007 Total  2008 Total  2009 Total  2010 Total  Overall Total  \n",
+       "All modes       8382.0      7862.0      7481.0      7259.0        73493.0  \n",
+       "Bicyclist       1179.0      1270.0      1262.0      1273.0        10660.0  \n",
+       "Bus               70.0        76.0        64.0        65.0          608.0  \n",
+       "Car/Pickup      6025.0      5413.0      5061.0      4722.0        53738.0  \n",
+       "Motorcycle      2477.0      2500.0      2217.0      2183.0        19867.0  \n",
+       "Pedestrian      2683.0      2556.0      2506.0      2474.0        22741.0  \n",
+       "Truck            356.0       314.0       269.0       244.0         2990.0  \n",
+       "Vehicles        6939.0      6427.0      5984.0      5678.0        61055.0  "
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#total killed vs severe injury per year"
+    "#Total collisions by type per year starting with 2002\n",
+    "\n",
+    "#specify columns to total\n",
+    "specific_columns = [\"All modes\", \"Bicyclist\", \"Bus\", \"Car/Pickup\", \"Motorcycle\", \"Pedestrian\", \"Truck\", \"Vehicles\"]\n",
+    "\n",
+    "totals_2002 = collisions_2002[specific_columns].sum()\n",
+    "totals_2002 = pd.DataFrame({\"2002 Total\":totals_2002})\n",
+    "\n",
+    "totals_2003 = collisions_2003[specific_columns].sum()\n",
+    "totals_2003 = pd.DataFrame({\"2003 Total\":totals_2003})\n",
+    "\n",
+    "totals_2004 = collisions_2004[specific_columns].sum()\n",
+    "totals_2004 = pd.DataFrame({\"2004 Total\":totals_2004})\n",
+    "\n",
+    "totals_2005 = collisions_2005[specific_columns].sum()\n",
+    "totals_2005 = pd.DataFrame({\"2005 Total\":totals_2005})\n",
+    "\n",
+    "totals_2006 = collisions_2006[specific_columns].sum()\n",
+    "totals_2006 = pd.DataFrame({\"2006 Total\":totals_2006})\n",
+    "\n",
+    "totals_2007 = collisions_2007[specific_columns].sum()\n",
+    "totals_2007 = pd.DataFrame({\"2007 Total\":totals_2007})\n",
+    "\n",
+    "totals_2008 = collisions_2008[specific_columns].sum()\n",
+    "totals_2008 = pd.DataFrame({\"2008 Total\":totals_2008})\n",
+    "\n",
+    "totals_2009 = collisions_2009[specific_columns].sum()\n",
+    "totals_2009 = pd.DataFrame({\"2009 Total\":totals_2009})\n",
+    "\n",
+    "totals_2010 = collisions_2010[specific_columns].sum()\n",
+    "totals_2010 = pd.DataFrame({\"2010 Total\":totals_2010})\n",
+    "\n",
+    "all_totals = new_df[specific_columns].sum()\n",
+    "all_totals = pd.DataFrame({\"Overall Total\": all_totals})\n",
+    "\n",
+    "#Combine totals for each year into a single dataframe\n",
+    "yearly_totals_mode = pd.merge(totals_2002, totals_2003, left_index=True, right_index=True)\n",
+    "yearly_totals_mode = pd.merge(yearly_totals_mode, totals_2004, left_index=True, right_index=True)\n",
+    "yearly_totals_mode = pd.merge(yearly_totals_mode, totals_2005, left_index=True, right_index=True)\n",
+    "yearly_totals_mode = pd.merge(yearly_totals_mode, totals_2006, left_index=True, right_index=True)\n",
+    "yearly_totals_mode = pd.merge(yearly_totals_mode, totals_2007, left_index=True, right_index=True)\n",
+    "yearly_totals_mode = pd.merge(yearly_totals_mode, totals_2008, left_index=True, right_index=True)\n",
+    "yearly_totals_mode = pd.merge(yearly_totals_mode, totals_2009, left_index=True, right_index=True)\n",
+    "yearly_totals_mode = pd.merge(yearly_totals_mode, totals_2010, left_index=True, right_index=True)\n",
+    "yearly_totals_mode = pd.merge(yearly_totals_mode, all_totals, left_index=True, right_index=True)\n",
+    "\n",
+    "yearly_totals_mode\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2002 Total</th>\n",
+       "      <th>2003 Total</th>\n",
+       "      <th>2004 Total</th>\n",
+       "      <th>2005 Total</th>\n",
+       "      <th>2006 Total</th>\n",
+       "      <th>2007 Total</th>\n",
+       "      <th>2008 Total</th>\n",
+       "      <th>2009 Total</th>\n",
+       "      <th>2010 Total</th>\n",
+       "      <th>Overall Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Killed</th>\n",
+       "      <td>8715.0</td>\n",
+       "      <td>8933.0</td>\n",
+       "      <td>8762.0</td>\n",
+       "      <td>8925.0</td>\n",
+       "      <td>9063.0</td>\n",
+       "      <td>8586.0</td>\n",
+       "      <td>7835.0</td>\n",
+       "      <td>7324.0</td>\n",
+       "      <td>6869.0</td>\n",
+       "      <td>75012.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Severe Injury</th>\n",
+       "      <td>19590.0</td>\n",
+       "      <td>19293.0</td>\n",
+       "      <td>19698.0</td>\n",
+       "      <td>19434.0</td>\n",
+       "      <td>19468.0</td>\n",
+       "      <td>19525.0</td>\n",
+       "      <td>18583.0</td>\n",
+       "      <td>17520.0</td>\n",
+       "      <td>17029.0</td>\n",
+       "      <td>170140.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               2002 Total  2003 Total  2004 Total  2005 Total  2006 Total  \\\n",
+       "Killed             8715.0      8933.0      8762.0      8925.0      9063.0   \n",
+       "Severe Injury     19590.0     19293.0     19698.0     19434.0     19468.0   \n",
+       "\n",
+       "               2007 Total  2008 Total  2009 Total  2010 Total  Overall Total  \n",
+       "Killed             8586.0      7835.0      7324.0      6869.0        75012.0  \n",
+       "Severe Injury     19525.0     18583.0     17520.0     17029.0       170140.0  "
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#total killed vs severe injury per year\n",
+    "death_injury = [\"Killed\", \"Severe Injury\"]\n",
+    "\n",
+    "di_totals_2002 = collisions_2002[death_injury].sum()\n",
+    "di_totals_2002 = pd.DataFrame({\"2002 Total\":di_totals_2002})\n",
+    "\n",
+    "di_totals_2003 = collisions_2003[death_injury].sum()\n",
+    "di_totals_2003 = pd.DataFrame({\"2003 Total\":di_totals_2003})\n",
+    "\n",
+    "di_totals_2004 = collisions_2004[death_injury].sum()\n",
+    "di_totals_2004 = pd.DataFrame({\"2004 Total\":di_totals_2004})\n",
+    "\n",
+    "di_totals_2005 = collisions_2005[death_injury].sum()\n",
+    "di_totals_2005 = pd.DataFrame({\"2005 Total\":di_totals_2005})\n",
+    "\n",
+    "di_totals_2006 = collisions_2006[death_injury].sum()\n",
+    "di_totals_2006 = pd.DataFrame({\"2006 Total\":di_totals_2006})\n",
+    "\n",
+    "di_totals_2007 = collisions_2007[death_injury].sum()\n",
+    "di_totals_2007 = pd.DataFrame({\"2007 Total\":di_totals_2007})\n",
+    "\n",
+    "di_totals_2008 = collisions_2008[death_injury].sum()\n",
+    "di_totals_2008 = pd.DataFrame({\"2008 Total\":di_totals_2008})\n",
+    "\n",
+    "di_totals_2009 = collisions_2009[death_injury].sum()\n",
+    "di_totals_2009 = pd.DataFrame({\"2009 Total\":di_totals_2009})\n",
+    "\n",
+    "di_totals_2010 = collisions_2010[death_injury].sum()\n",
+    "di_totals_2010 = pd.DataFrame({\"2010 Total\":di_totals_2010})\n",
+    "\n",
+    "di_all_totals = new_df[death_injury].sum()\n",
+    "di_all_totals = pd.DataFrame({\"Overall Total\": di_all_totals})\n",
+    "\n",
+    "#Combine totals for each year into a single dataframe\n",
+    "yearly_totals_di = pd.merge(di_totals_2002, di_totals_2003, left_index=True, right_index=True)\n",
+    "yearly_totals_di = pd.merge(yearly_totals_di, di_totals_2004, left_index=True, right_index=True)\n",
+    "yearly_totals_di = pd.merge(yearly_totals_di, di_totals_2005, left_index=True, right_index=True)\n",
+    "yearly_totals_di = pd.merge(yearly_totals_di, di_totals_2006, left_index=True, right_index=True)\n",
+    "yearly_totals_di = pd.merge(yearly_totals_di, di_totals_2007, left_index=True, right_index=True)\n",
+    "yearly_totals_di = pd.merge(yearly_totals_di, di_totals_2008, left_index=True, right_index=True)\n",
+    "yearly_totals_di = pd.merge(yearly_totals_di, di_totals_2009, left_index=True, right_index=True)\n",
+    "yearly_totals_di = pd.merge(yearly_totals_di, di_totals_2010, left_index=True, right_index=True)\n",
+    "yearly_totals_di = pd.merge(yearly_totals_di, di_all_totals, left_index=True, right_index=True)\n",
+    "\n",
+    "yearly_totals_di"
    ]
   },
   {
