--- a/Maura's whiteboard.ipynb
+++ b/Maura's whiteboard.ipynb
@@ -59,6 +59,19 @@
     "print(correlation_matrix)\n",
     "#clean_df.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#how lethal are certain modes of transport by miles driven\n",
+    "#adjust for the population a motorcycle more dangerous\n",
+    "#demonstrate our thought process and sequential analysis\n",
+    "#ideally linear regression should be a part of our analysis\n",
+    "#run a correlation matrix to look for variables that have a strong negative or positive correlation"
+   ]
   }
  ],
  "metadata": {
