--- a/Monica.ipynb
+++ b/Monica.ipynb
@@ -3065,7 +3065,7 @@
     "plt.ylim(0, 55000)\n",
     "plt.title('Accidents by mode and Severity')\n",
     "plt.xticks(rotation=45)\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
