--- a/Maura's whiteboard.ipynb
+++ b/Maura's whiteboard.ipynb
@@ -36,7 +36,10 @@
     "#graphs comparing accidnets and miles traveled? Or region and miles traveled? Might help with linear regression later. See comment in box with correlation matrix to see how to use miles traveled\n",
     "#Do these for every year\n",
     "#Do these summing up all the years, maybe make dataframes specific to a year\n",
-    "#any other ideas?"
+    "#any other ideas?\n",
+    "\n",
+    "\n",
+    "#testing"
    ]
   },
   {
