--- a/Monica.ipynb
+++ b/Monica.ipynb
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -463,6 +463,7 @@
        "      <th>injuries</th>\n",
        "      <th>totalpop</th>\n",
        "      <th>poprate</th>\n",
+       "      <th>version</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -481,6 +482,7 @@
        "      <td>7.0</td>\n",
        "      <td>2914663.0</td>\n",
        "      <td>0.24</td>\n",
+       "      <td>12/17/13 13:55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -497,6 +499,7 @@
        "      <td>49.0</td>\n",
        "      <td>2914663.0</td>\n",
        "      <td>1.68</td>\n",
+       "      <td>12/17/13 13:55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -513,6 +516,7 @@
        "      <td>1.0</td>\n",
        "      <td>2914663.0</td>\n",
        "      <td>0.03</td>\n",
+       "      <td>12/17/13 13:55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -529,6 +533,7 @@
        "      <td>130.0</td>\n",
        "      <td>2914663.0</td>\n",
        "      <td>4.46</td>\n",
+       "      <td>12/17/13 13:55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -545,9 +550,11 @@
        "      <td>488.0</td>\n",
        "      <td>2914663.0</td>\n",
        "      <td>16.74</td>\n",
+       "      <td>12/17/13 13:55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -577,6 +584,7 @@
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>12/17/13 13:55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>448944</th>\n",
@@ -593,6 +601,7 @@
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>12/17/13 13:55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>448946</th>\n",
@@ -609,6 +618,7 @@
        "      <td>1.0</td>\n",
        "      <td>16180.0</td>\n",
        "      <td>6.18</td>\n",
+       "      <td>12/17/13 13:55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>448947</th>\n",
@@ -625,6 +635,7 @@
        "      <td>1.0</td>\n",
        "      <td>16180.0</td>\n",
        "      <td>6.18</td>\n",
+       "      <td>12/17/13 13:55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>448948</th>\n",
@@ -641,10 +652,11 @@
        "      <td>1.0</td>\n",
        "      <td>16180.0</td>\n",
        "      <td>6.18</td>\n",
+       "      <td>12/17/13 13:55</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>171659 rows × 13 columns</p>\n",
+       "<p>171659 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -674,30 +686,30 @@
        "448947       6057.0     Northeast Sierra          6.0  Pedestrian   \n",
        "448948       6057.0     Northeast Sierra          6.0    Vehicles   \n",
        "\n",
-       "             severity  injuries   totalpop  poprate  \n",
-       "2              Killed       7.0  2914663.0     0.24  \n",
-       "3       Severe Injury      49.0  2914663.0     1.68  \n",
-       "4       Severe Injury       1.0  2914663.0     0.03  \n",
-       "5              Killed     130.0  2914663.0     4.46  \n",
-       "6       Severe Injury     488.0  2914663.0    16.74  \n",
-       "...               ...       ...        ...      ...  \n",
-       "448943  Severe Injury       1.0        NaN      NaN  \n",
-       "448944  Severe Injury       1.0        NaN      NaN  \n",
-       "448946  Severe Injury       1.0    16180.0     6.18  \n",
-       "448947  Severe Injury       1.0    16180.0     6.18  \n",
-       "448948  Severe Injury       1.0    16180.0     6.18  \n",
+       "             severity  injuries   totalpop  poprate         version  \n",
+       "2              Killed       7.0  2914663.0     0.24  12/17/13 13:55  \n",
+       "3       Severe Injury      49.0  2914663.0     1.68  12/17/13 13:55  \n",
+       "4       Severe Injury       1.0  2914663.0     0.03  12/17/13 13:55  \n",
+       "5              Killed     130.0  2914663.0     4.46  12/17/13 13:55  \n",
+       "6       Severe Injury     488.0  2914663.0    16.74  12/17/13 13:55  \n",
+       "...               ...       ...        ...      ...             ...  \n",
+       "448943  Severe Injury       1.0        NaN      NaN  12/17/13 13:55  \n",
+       "448944  Severe Injury       1.0        NaN      NaN  12/17/13 13:55  \n",
+       "448946  Severe Injury       1.0    16180.0     6.18  12/17/13 13:55  \n",
+       "448947  Severe Injury       1.0    16180.0     6.18  12/17/13 13:55  \n",
+       "448948  Severe Injury       1.0    16180.0     6.18  12/17/13 13:55  \n",
        "\n",
-       "[171659 rows x 13 columns]"
+       "[171659 rows x 14 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#clean data to remove null values and columns \n",
-    "clean_df = df.drop(columns = [\"ind_definition\",\"version\"])\n",
+    "clean_df = df.drop(columns = [\"ind_definition\"])\n",
     "clean_df = clean_df.drop(clean_df[clean_df['ind_id'] == \"END OF TABLE\"].index)\n",
     "clean_df = clean_df.drop(columns = [\"ind_id\", 'LL95CI_avmtrate', 'UL95CI_avmtrate',\n",
     "       'avmtrate_se', 'avmtrate_rse', 'CA_decile_avmt', 'CA_RR_avmtrate',\n",
@@ -3128,6 +3140,404 @@
     "# Display the correlation matrix\n",
     "print(correlation_matrix)\n",
     "#clean_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>county_name</th>\n",
+       "      <th>totalpop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alameda</td>\n",
+       "      <td>2.615404e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alpine</td>\n",
+       "      <td>6.748800e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Amador</td>\n",
+       "      <td>2.783104e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Butte</td>\n",
+       "      <td>2.763127e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Calaveras</td>\n",
+       "      <td>3.306044e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Colusa</td>\n",
+       "      <td>1.510805e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Contra Costa</td>\n",
+       "      <td>1.602869e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Del Norte</td>\n",
+       "      <td>1.998807e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>El Dorado</td>\n",
+       "      <td>1.716693e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Fresno</td>\n",
+       "      <td>1.555019e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Glenn</td>\n",
+       "      <td>2.321178e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Humboldt</td>\n",
+       "      <td>1.414126e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Imperial</td>\n",
+       "      <td>2.153314e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Inyo</td>\n",
+       "      <td>1.548749e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Kern</td>\n",
+       "      <td>1.243802e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Kings</td>\n",
+       "      <td>1.768892e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Lake</td>\n",
+       "      <td>5.768906e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Lassen</td>\n",
+       "      <td>2.718889e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>1.972149e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Madera</td>\n",
+       "      <td>1.740034e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Marin</td>\n",
+       "      <td>2.824378e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Mariposa</td>\n",
+       "      <td>1.139681e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Mendocino</td>\n",
+       "      <td>8.710595e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Merced</td>\n",
+       "      <td>3.357263e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Modoc</td>\n",
+       "      <td>5.222900e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Mono</td>\n",
+       "      <td>1.140947e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Monterey</td>\n",
+       "      <td>5.648599e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Napa</td>\n",
+       "      <td>1.747180e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Nevada</td>\n",
+       "      <td>9.412414e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Orange</td>\n",
+       "      <td>5.382776e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Placer</td>\n",
+       "      <td>4.399448e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Plumas</td>\n",
+       "      <td>1.387659e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Riverside</td>\n",
+       "      <td>3.448548e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Sacramento</td>\n",
+       "      <td>2.191576e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>San Benito</td>\n",
+       "      <td>5.706527e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>San Bernardino</td>\n",
+       "      <td>3.608137e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>San Diego</td>\n",
+       "      <td>5.814412e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>1.705475e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>San Joaquin</td>\n",
+       "      <td>1.123409e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>San Luis Obispo</td>\n",
+       "      <td>3.157721e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>San Mateo</td>\n",
+       "      <td>1.086083e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>Santa Barbara</td>\n",
+       "      <td>6.030149e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>Santa Clara</td>\n",
+       "      <td>3.182481e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>Santa Cruz</td>\n",
+       "      <td>3.095140e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Shasta</td>\n",
+       "      <td>2.425984e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>Sierra</td>\n",
+       "      <td>1.936760e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>Siskiyou</td>\n",
+       "      <td>3.752746e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>Solano</td>\n",
+       "      <td>6.797669e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>Sonoma</td>\n",
+       "      <td>6.990538e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>Stanislaus</td>\n",
+       "      <td>8.109161e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>Sutter</td>\n",
+       "      <td>1.112210e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>Tehama</td>\n",
+       "      <td>5.947875e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>Trinity</td>\n",
+       "      <td>8.046200e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>Tulare</td>\n",
+       "      <td>6.011084e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>Tuolumne</td>\n",
+       "      <td>4.499351e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>Ventura</td>\n",
+       "      <td>1.338625e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>Yolo</td>\n",
+       "      <td>2.578144e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>Yuba</td>\n",
+       "      <td>6.245227e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        county_name      totalpop\n",
+       "0           Alameda  2.615404e+08\n",
+       "1            Alpine  6.748800e+04\n",
+       "2            Amador  2.783104e+06\n",
+       "3             Butte  2.763127e+07\n",
+       "4         Calaveras  3.306044e+06\n",
+       "5            Colusa  1.510805e+06\n",
+       "6      Contra Costa  1.602869e+08\n",
+       "7         Del Norte  1.998807e+06\n",
+       "8         El Dorado  1.716693e+07\n",
+       "9            Fresno  1.555019e+08\n",
+       "10            Glenn  2.321178e+06\n",
+       "11         Humboldt  1.414126e+07\n",
+       "12         Imperial  2.153314e+07\n",
+       "13             Inyo  1.548749e+06\n",
+       "14             Kern  1.243802e+08\n",
+       "15            Kings  1.768892e+07\n",
+       "16             Lake  5.768906e+06\n",
+       "17           Lassen  2.718889e+06\n",
+       "18      Los Angeles  1.972149e+09\n",
+       "19           Madera  1.740034e+07\n",
+       "20            Marin  2.824378e+07\n",
+       "21         Mariposa  1.139681e+06\n",
+       "22        Mendocino  8.710595e+06\n",
+       "23           Merced  3.357263e+07\n",
+       "24            Modoc  5.222900e+05\n",
+       "25             Mono  1.140947e+06\n",
+       "26         Monterey  5.648599e+07\n",
+       "27             Napa  1.747180e+07\n",
+       "28           Nevada  9.412414e+06\n",
+       "29           Orange  5.382776e+08\n",
+       "30           Placer  4.399448e+07\n",
+       "31           Plumas  1.387659e+06\n",
+       "32        Riverside  3.448548e+08\n",
+       "33       Sacramento  2.191576e+08\n",
+       "34       San Benito  5.706527e+06\n",
+       "35   San Bernardino  3.608137e+08\n",
+       "36        San Diego  5.814412e+08\n",
+       "37    San Francisco  1.705475e+08\n",
+       "38      San Joaquin  1.123409e+08\n",
+       "39  San Luis Obispo  3.157721e+07\n",
+       "40        San Mateo  1.086083e+08\n",
+       "41    Santa Barbara  6.030149e+07\n",
+       "42      Santa Clara  3.182481e+08\n",
+       "43       Santa Cruz  3.095140e+07\n",
+       "44           Shasta  2.425984e+07\n",
+       "45           Sierra  1.936760e+05\n",
+       "46         Siskiyou  3.752746e+06\n",
+       "47           Solano  6.797669e+07\n",
+       "48           Sonoma  6.990538e+07\n",
+       "49       Stanislaus  8.109161e+07\n",
+       "50           Sutter  1.112210e+07\n",
+       "51           Tehama  5.947875e+06\n",
+       "52          Trinity  8.046200e+05\n",
+       "53           Tulare  6.011084e+07\n",
+       "54         Tuolumne  4.499351e+06\n",
+       "55          Ventura  1.338625e+08\n",
+       "56             Yolo  2.578144e+07\n",
+       "57             Yuba  6.245227e+06"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculate population by county\n",
+    "yearly_injuries = clean_df.groupby('county_name')['totalpop'].sum().reset_index()\n",
+    "yearly_injuries"
    ]
   }
  ],
