--- a/Monica.ipynb
+++ b/Monica.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mahen\\AppData\\Local\\Temp\\ipykernel_11392\\2141459600.py:4: DtypeWarning: Columns (0,5,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/gj/34pvzc9x2x98g0vpglqmrsz80000gn/T/ipykernel_29475/2576391898.py:4: DtypeWarning: Columns (0,5,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(traffic_injuries)\n"
      ]
     },
@@ -409,14 +409,14 @@
        "[448950 rows x 31 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Open filtered CSV file\n",
-    "traffic_injuries = Path(\"Resources/road-traffic-injuries-2002-2010.csv\")\n",
+    "traffic_injuries = Path(\"../Resources/road-traffic-injuries-2002-2010.csv\")\n",
     "\n",
     "df = pd.read_csv(traffic_injuries)\n",
     "\n",
@@ -3543,9 +3543,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dev",
    "language": "python",
-   "name": "python3"
+   "name": "dev"
   },
   "language_info": {
    "codemirror_mode": {
