--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,14 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/gj/34pvzc9x2x98g0vpglqmrsz80000gn/T/ipykernel_16595/3281253463.py:3: DtypeWarning: Columns (0,5,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/gj/34pvzc9x2x98g0vpglqmrsz80000gn/T/ipykernel_29420/3385406880.py:3: DtypeWarning: Columns (0,5,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(traffic_injuries)\n"
      ]
     },
@@ -408,14 +408,14 @@
        "[448950 rows x 31 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Open filtered CSV file\n",
-    "traffic_injuries = Path(\"Resources/road-traffic-injuries-2002-2010.csv\")\n",
+    "traffic_injuries = Path(\"../Resources/road-traffic-injuries-2002-2010.csv\")\n",
     "df = pd.read_csv(traffic_injuries)\n",
     "\n",
     "# Read in the data. \n",
