adding csv back in

--- a/Monica.ipynb
+++ b/Monica.ipynb
@@ -1658,6 +1658,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we need a graph for accidents by region name and severity by poprate, \n",
+    "# injuries by year and mode by poprate\n",
+    "# injuries by year and severity"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -3051,8 +3062,7 @@
     "plt.ylim(0, 25000)\n",
     "plt.title('Accidents by Year')\n",
     "plt.xticks(rotation=45)\n",
-    "plt.show()\n",
-    "#Add Charts to DATA folder"
+    "plt.show()\n"
    ]
   },
   {
@@ -3111,7 +3121,7 @@
     "plt.title('Injuries by Year and Severity')\n",
     "plt.xticks(rotation=45)\n",
     "plt.show()\n",
-    "#save in data folder"
+    "#Add Charts to DATA folder"
    ]
   },
   {
@@ -3251,7 +3261,9 @@
     "plt.ylabel('Ratio')\n",
     "plt.legend(title='Population Ratio')\n",
     "plt.xticks(range(len(yps_total.index)), yps_total.index)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "#Add Charts to DATA folder"
    ]
   },
   {
@@ -3280,7 +3292,7 @@
     "plt.title('Injuries by Year and Mode')\n",
     "plt.xticks(rotation=45)\n",
     "plt.show()\n",
-    "#save in data folder"
+    "#Add Charts to DATA folder"
    ]
   },
   {
@@ -3316,7 +3328,9 @@
     "\n",
     "# Plot a pie chart using the DataFrame\n",
     "collisions_by_mode.set_index('mode')['Accidents'].plot.pie(autopct='%1.1f%%', startangle=45)\n",
-    "plt.title('Accidents by Transportation')"
+    "plt.title('Accidents by Transportation')\n",
+    "\n",
+    "#Add Charts to DATA folder"
    ]
   },
   {
@@ -3392,7 +3406,7 @@
     "plt.title('Accidents by region_name and Severity')\n",
     "plt.xticks(rotation=45)\n",
     "plt.show()\n",
-    "#save in data folder"
+    "#Add Charts to DATA folder"
    ]
   },
   {
